# dots

./: .gitignore  README.md  index-CI6AN4yy.js  index-o9WVdTCY.css  index.html  package.json
assets/: index-ChL2XIPA.js
game-cpp/: MODULE.bazel  replays.dots
game-cpp/src/: BUILD.bazel  convolution.cc  convolution.h  deepq_loss.h  deepq_training.cc  game.cc  game.h  replay.cc  replay.h
game-cpp/test/: BUILD.bazel  convolution.test.cc  convolution_backprop.test.cc  convolution_layer.test.cc  game.test.cc
public/: hello-world.js  hello-world.wasm
src/: App.tsx  Dots.tsx  DotsGame.tsx  GameState.ts  Grid.tsx  Polygon.tsx  Regions.tsx  WasmLogic.ts  constants.ts  wasm_interface.ts
uchen-core/: MODULE.bazel  README.md
uchen-core/.github/workflows/: test.yml
uchen-core/benchmark/: BUILD  attention.benchmark.cc  linear.cc  matrix_math.benchmark.cc  matrixmul.benchmark.cc  rnn_names.cc  softmax.cc
uchen-core/datasets/names/: BUILD  NationalNames.csv  names.cc  names.h
uchen-core/experimental/: BUILD  rnn_names.cc  rnn_names.h
uchen-core/test/: BUILD  arena.test.cc  layers.test.cc  model.test.cc  parameters.test.cc  rnn.test.cc  test_lib.h
uchen-core/test/input/: BUILD  embeddings.test.cc  text_e2e.test.cc  tokenizer.test.cc
uchen-core/test/math/: BUILD  matrix.test.cc  matrix_math.test.cc  primitives.test.cc  softmax.test.cc
uchen-core/test/tensor/: BUILD.bazel  float_tensor.test.cc  special_tensors.test.cc  tensor_mul.test.cc  tensor_test_util.h
uchen-core/test/text/: BUILD  attention.test.cc  embeddings.test.cc
uchen-core/test/training/: BUILD  backprop.test.cc  grad.e2e.test.cc  kaiming_he.test.cc  loss.test.cc  model_gradients.test.cc  rnn.test.cc  training.test.cc
uchen-core/uchen/: BUILD  inferrence_context.h  layer_traits.h  layers.h  linear.h  memory.h  model.h  parameters.h  rnn.h  softmax.h  utils.cc  vector.h
uchen-core/uchen/input/: BUILD  text.cc  text.h
uchen-core/uchen/math/: BUILD  concepts.h  matrix.h  matrix_core.h  matrix_functional.h  multiplication.h  primitives.cc  primitives.h  softmax.h
uchen-core/uchen/tensor/: BUILD  arithmetic.h  float_tensor.cc  float_tensor.h  function.h  special_tensors.h  tensor.cc  tensor.h  tile.h
uchen-core/uchen/text/: BUILD  attention.h  embeddings.h  embeddings_training.h
uchen-core/uchen/training/: BUILD  backprop.h  kaiming_he.h  loss.h  model_gradients.h  parameter_gradients.h  rnn.h  training.h
wasm/: .bazelrc  MODULE.bazel
wasm/src/: BUILD.bazel  game.cc  game.h  main.cc  vectoradd.cc
