"""
Logic and model for the Dots game
"""
module(name="uchen-dots-game", version="1.0.0")

bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "rules_cc", version = "0.2.8")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "0ae99b7adb025b251962942f6e8a698a5539888b",
)
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)