"""
Uchen core - ML framework
"""
module(name = "uchen-core", version = "0.1", compatibility_level = 1)

bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "rules_cc", version = "0.2.4")

# Highway - is not updated often enough
bazel_dep(name = "highway", version = "1.3.0")

# Dev dependencies
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "0ae99b7adb025b251962942f6e8a698a5539888b",
)
