load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "game",
    srcs = ["game.cc"],
    hdrs = ["game.h"],
    deps = [
        ":convolution",
        "@abseil-cpp//absl/container:inlined_vector",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@uchen-core//uchen:runtime",
    ],
)

cc_binary(
    name = "deepq_training",
    srcs = ["deepq_training.cc"],
    deps = [
        ":convolution",
        ":game",
        ":training",    
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:initialize",
        "@uchen-core//uchen/training",
        "@uchen-core//uchen/training:kaiminghe",
    ],
)

cc_library(
    name = "convolution",
    srcs = ["convolution.cc"],
    hdrs = ["convolution.h"],
    deps = [
        "@uchen-core//uchen:runtime",
        "@uchen-core//uchen/training",
    ],
)

cc_library(
    name = "training",
    srcs = ["replay.cc"],
    hdrs = ["replay.h"],
    deps = [
        ":deepq_loss",
        ":game",
        "@abseil-cpp//absl/log",
    ],
)

cc_library(
    name = "deepq_loss",
    srcs = [],
    hdrs = ["deepq_loss.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@uchen-core//uchen:runtime",
        "@uchen-core//uchen/training",
    ],
)
