load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "convolution_test",
    srcs = ["convolution.test.cc"],
    deps = [
        "//src:convolution",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "game_test",
    srcs = ["game.test.cc"],
    deps = [
        "//src:game",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:initialize",
        "@googletest//:gtest",
    ],
)
