load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "hello-world",
    srcs = ["main.cc"],
    linkopts = ["-lembind"],
    deps = [
        ":game",
        ":vectoradd",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "game",
    srcs = ["game.cc"],
    hdrs = ["game.h"],
    deps = [
        "@abseil-cpp//absl/container:inlined_vector",
    ],
)

cc_library(
    name = "vectoradd",
    srcs = ["vectoradd.cc"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@highway//:hwy",
    ],
)

wasm_cc_binary(
    name = "hello-world-wasm",
    cc_target = ":hello-world",
    simd = True,
)
